# d8s-strings

./: .gitignore  CHANGELOG.md  README.md  conftest.py  democritus_strings_docs.json  pyproject.toml  release-please-config.json  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
d8s_strings/: __init__.py  strings.py  strings_temp_utils.py
democritus_strings/: __init__.py  strings.py  strings_temp_utils.py
docker/: lint.sh
tests/: test_strings.py
