[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "d8s_strings"
version = "0.6.0"
description = "Democritus functions for working with Python strings."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GNU Lesser General Public License v3" }
authors = [{ name = "Floyd Hightower" }]
keywords = ["democritus", "utility", "python", "python-strings", "python-strings-utility"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "d8s-dicts>=0.6.0,<1.0",
    "d8s-hypothesis>=0.6.0,<1.0",
    "d8s-lists>=0.8.0,<1.0",
    "d8s-math>=0.7.0,<1.0",
    "d8s-uuids>=0.6.0,<1.0",
    "hypothesis>=6.155.7,<7.0",
    "inflect>=7.5.0,<8.0",
    "more-itertools>=11.1.0,<12.0",
]

[project.urls]
Source = "https://github.com/democritus-project/d8s-strings"
Issues = "https://github.com/democritus-project/d8s-strings/issues"

[dependency-groups]
dev = [
    "codecov>=2.1.13,<3.0",
    "d8s-file-system>=0.10.0,<1.0",
    "d8s-python>=0.9.0,<1.0",
    "ipython>=8.18.0,<10.0",
    "mypy>=2.0,<3.0",
    "pytest>=9.0,<10.0",
    "pytest-cov>=7.0,<8.0",
    "ruff>=0.15.0,<0.17.0",
]

[tool.hatch.build.targets.wheel]
packages = ["d8s_strings"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"d8s_strings/__init__.py" = ["F401", "F403"]
"tests/*" = ["E501"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-v --cov=. --cov-report term-missing --cov-fail-under 90"
python_files = "tests/test_*.py"
